--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -39,6 +39,12 @@
         	<scope>runtime</scope>
         	<optional>true</optional>
     	</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    		<version>2.3.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
